<resources>
    <string name="app_name">NonProfitApp</string>
    <string name="welcome_message">Welcome!</string>
    <string name="cust_sign_in">Customer Sign In</string>
    <string name="vol_sign_in">Volunteer Sign In</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_volunteer_view">VolunteerView</string>
    <string name="element_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.</string>
    <string name="action_settings">Settings</string>
    <string name="by_bag">Sort by Bag Type</string>
    <string name="by_date">Sort by Date</string>
    <string name="by_name">Sort by Name</string>
    <string name="by_progress">Sort by Progress</string>
    <string name="please_choose_date">"Please choose a pickup date from the available days: "</string>
    <string name="please_choose_a_pickup_time">"Please choose a pickup time between "</string>

    <!-- For help dialog boxes.  -->
    <string name="ok">Ok</string>
    <string name="help_title">How do I use this page?</string>
    <!-- Customer side -->
    <string name="help_login_customer">Log in or sign up to use this service. If you have
        previously created an account, please log in using the same username and password that you
        used to sign up. If you do not have an account, please sign click the relevant sign in button
        and you will be able to create one.</string>
    <string name="help_foodbank_sel">Select a food bank or pantry for a drive-by pickup, then press
        the button at the bottom of the screen to continue.</string>
    <string name="help_bag_sel">Select the food bag type that you would like to pick up, then press
        the button at the bottom of the screen to continue.</string>
    <string name="help_date_picker">Select the date on which you would like to pick up your
        bag, then press the button at the bottom of the screen to continue.</string>
    <string name="help_time_picker">Select the time of day at which you would like to pick up your
        bag, then press the button at the bottom of the screen to continue.</string>
    <string name="help_confirmation_page">Confirm that the details of your order as displayed on
        this page are correct. Press the button at the bottom of the screen to place your order when
        you have verified your order details.</string>
    <string name="help_window_display_page">When picking up your order, hold your phone screen with
        this page showing next to your window. This will let the volunteers know which type of bag
        you ordered.</string>
    <!-- Volunteer side -->
    <string name="help_vol_login_somehow">Log in or sign up to use this service. If your organization
        has previously created an account, please use your organization\'s existing username and
        password. If your organization does not have an account, please create one by selecting a
        sign-in method.</string>
    <string name="help_vol_foodbank">Select the food bank for which you would like to view a list of
        current orders.</string>
    <string name="help_vol_orders">This page lists all the current orders for your selected food
        bank. From this page, you can view existing orders, sort and filter them, and mark them
        completed. If you have an email address from your food bank or pantry (myemail\@myfoodbank.org for
        example) you can delete orders.</string>

</resources>
