<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="Undo Progress"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/trash"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="always"
        android:title="Delete Order"/>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_list_24"
        android:title="Sort"
        app:showAsAction="always" >
        <menu>
            <item android:id="@+id/by_date"
                android:title="@string/by_date" />
            <item android:id="@+id/by_bag"
                android:title="@string/by_bag" />
            <item android:id="@+id/by_name"
                android:title="@string/by_name" />
            <item android:id="@+id/by_progress"
                android:title="@string/by_progress" />
        </menu>
    </item>

</menu>