<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_message"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/customer_sign_in"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/customer_sign_in"
        android:layout_width="261dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimaryLight"
        android:onClick="onClick"
        android:text="@string/cust_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <TextView
        android:id="@+id/volunteer_sign_in"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/vol_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_sign_in" />

    <Button
        android:id="@+id/selectBag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:onClick="selectGroceryBag"
        android:text="Select Grocery Bag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="478dp"
            android:layout_marginBottom="44dp"
            android:onClick="sendMessageFoodbank"
            android:text="Get to food bank selection"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="76dp"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="127dp"
            android:onClick="sendMessageWindow"
            android:text="Get to Window Screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/button1" />


</androidx.constraintlayout.widget.ConstraintLayout>
